[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/Enemies/WanderController.gd" type="Script" id=1]

[node name="WanderController" type="Node2D"]
script = ExtResource( 1 )

[node name="WanderTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="AlertTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="timeout" from="AlertTimer" to="." method="_on_AlertTimer_timeout"]
